--- a/AzureWebsite.Nodejs/package.json
+++ b/AzureWebsite.Nodejs/package.json
@@ -4,7 +4,7 @@
   "description": "A basic framework web site to demonstrate the use of Node.Js, gulp, jade/pug, sass and typescript to build a static easy maintainable source code",
   "main": "app.js",
   "author": {
-    "name": "Rickard Nisses-Gagnér"
+    "name": "Rickard Nisses-Gagnï¿½r"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,5 +16,9 @@
     "gulp-clean": "^0.4.0",
     "gulp-pug": "^5.0.0",
     "open": "^8.2.1"
+  },
+  "devDependencies": {
+    "gulp-sass": "^5.0.0",
+    "sass": "^1.42.1"
   }
 }
