--- a/AzureWebsite.Function/AzureWebsite.Function.csproj
+++ b/AzureWebsite.Function/AzureWebsite.Function.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.13" />
+    <PackageReference Include="WebPush" Version="1.0.12" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AzureWebsite.Library\AzureWebsite.Library.csproj" />
