--- a/AzureWebsite.Console/AzureWebsite.Console.csproj
+++ b/AzureWebsite.Console/AzureWebsite.Console.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -9,6 +9,15 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AzureWebsite.Library\AzureWebsite.Library.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="companies.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="persons.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
