--- a/AzureWebsite.Function/AzureWebsite.Function.csproj
+++ b/AzureWebsite.Function/AzureWebsite.Function.csproj
@@ -4,6 +4,7 @@
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="6.0.8" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.13" />
     <PackageReference Include="WebPush" Version="1.0.12" />
   </ItemGroup>
